GNOME Bugzilla – Bug 166155
World Filter extracts control characters that makes BEST rendering messy
Last modified: 2005-02-23 17:12:52 UTC
Steps to reproduce: 1) Create word documents with some symbols (tick marks, faces, etc) 2) Let beagle index the document 3) Search using BEST so that the document gets hit. 4) The snippet shown in BEST renders the symbols as some "encoded-characters". Actual results: See the attached image. Expected results: Word filter should not extract such characters. Does this happen every time? Yes Other information:
Created attachment 36921 [details] encoded characters gets rendered in BEST
Oops!! is "Word" filter not "World" filter (in the bug summary ;-))
Can't reproduce this here.. could you attach a doc file with this problem?
Fixed in CVS.