//bugzilla.gnome.org/show_bug.cgi?id=166155. Do not consider non-printing

*  Fix for http://bugzilla.gnome.org/show_bug.cgi?id=166155.  Do not consider non-printing characters for indexing (in UTF8 charset).  Also, process word-specific-special-characters properly.